stateDiagram-v2
    [*] --> RECEIVED
    RECEIVED --> ACCEPTED: accepted
    RECEIVED --> ABORTED: rejected / malformed / unsupported
    ACCEPTED --> EXECUTING: execution begins
    ACCEPTED --> CANCELED: canceled before execution
    EXECUTING --> SUCCEEDED: completed
    EXECUTING --> CANCELED: canceled
    EXECUTING --> ABORTED: failed
    SUCCEEDED --> [*]
    ABORTED --> [*]
    CANCELED --> [*]
